<resources>
    <string name="app_name">GitHubRepoTrending</string>
    <string name="trending">Trending</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="something_went_wrong_title">Something went wrong ..</string>
    <string name="something_went_wrong_message_body">An Alien is probably blocking your signal.</string>
    <string name="retry">RETRY</string>
    <string name="solid_circle">solid circle</string>
    <string name="fork">fork</string>
    <string name="star">star</string>

    <!--option menu item-->
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_stars">Sort by stars</string>

    <!--for hard-coded text-->
    <string name="user_name">kusti8</string>
    <string name="repo_name">proton-native</string>
    <string name="language">Javascript</string>
    <string name="star_count">14,236</string>
    <string name="fork_count">4,376</string>
    <string name="repo_description">A React environment for cross platform native desktop apps. A React environment for cross platform native desktop apps.</string>

</resources>