<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingTop="@dimen/sixteen_dp"
    android:paddingRight="@dimen/sixteen_dp"
    android:paddingLeft="@dimen/sixteen_dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/item_avatar_img"
        android:layout_height="@dimen/thirty_two_dp"
        android:layout_width="@dimen/thirty_two_dp"
        android:layout_marginTop="@dimen/eight_dp"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@android:color/transparent"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/item_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:text="@string/user_name"
        android:fontFamily="@font/roboto"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintStart_toEndOf="@+id/item_avatar_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/six_dp"
        android:text="@string/repo_name"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/fifteen_sp"
        app:layout_constraintStart_toEndOf="@+id/item_avatar_img"
        app:layout_constraintTop_toBottomOf="@+id/item_author" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:text="@string/repo_description"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_avatar_img"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <ImageView
        android:id="@+id/language_symbol"
        android:layout_width="@dimen/sixteen_dp"
        android:layout_height="@dimen/sixteen_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:src="@drawable/solid_circle"
        app:layout_constraintStart_toEndOf="@+id/item_avatar_img"
        app:layout_constraintTop_toBottomOf="@+id/item_description"
        android:contentDescription="@string/solid_circle" />

    <TextView
        android:id="@+id/item_language"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sixteen_dp"
        android:layout_marginStart="@dimen/four_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:text="@string/language"
        android:fontFamily="@font/roboto"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintStart_toEndOf="@+id/language_symbol"
        app:layout_constraintTop_toBottomOf="@+id/item_description" />

    <ImageView
        android:id="@+id/star_symbol"
        android:layout_width="@dimen/sixteen_dp"
        android:layout_height="@dimen/sixteen_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:src="@drawable/star_yellow"
        app:layout_constraintStart_toEndOf="@+id/item_language"
        app:layout_constraintTop_toBottomOf="@+id/item_description"
        android:contentDescription="@string/star" />

    <TextView
        android:id="@+id/item_star"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sixteen_dp"
        android:layout_marginStart="@dimen/four_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:text="@string/star_count"
        android:fontFamily="@font/roboto"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintStart_toEndOf="@+id/star_symbol"
        app:layout_constraintTop_toBottomOf="@+id/item_description" />

    <ImageView
        android:id="@+id/fork_symbol"
        android:layout_width="@dimen/sixteen_dp"
        android:layout_height="@dimen/sixteen_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:src="@drawable/fork_black"
        app:layout_constraintStart_toEndOf="@+id/item_star"
        app:layout_constraintTop_toBottomOf="@+id/item_description"
        android:contentDescription="@string/fork" />

    <TextView
        android:id="@+id/item_fork"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sixteen_dp"
        android:layout_marginStart="@dimen/four_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:text="@string/fork_count"
        android:fontFamily="@font/roboto"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintStart_toEndOf="@+id/fork_symbol"
        app:layout_constraintTop_toBottomOf="@+id/item_description" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="@color/grey_separation_line"
        app:layout_constraintTop_toBottomOf="@+id/item_language"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="item_description,language_symbol,item_language,
        star_symbol,item_star,fork_symbol,item_fork"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
