<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nointernet_connection"
        android:contentDescription="@string/no_internet_connection"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/error_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/something_went_wrong_title"
        android:textColor="@color/black"
        android:textSize="@dimen/eighteen_sp"
        app:layout_constraintTop_toBottomOf="@+id/no_internet_connection"
        app:layout_constraintBottom_toTopOf="@+id/error_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/error_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/grey_error_message"
        android:layout_marginTop="@dimen/eight_dp"
        android:textSize="@dimen/fifteen_sp"
        android:text="@string/something_went_wrong_message_body"
        app:layout_constraintTop_toBottomOf="@+id/error_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="@dimen/three_hundred_twenty_eight_dp"
        android:layout_height="@dimen/forty_eight_dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:background="@drawable/border"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/fifteen_sp"
        android:text="@string/retry"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>