<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fadeScrollbars="true"
    tools:context=".errorpage.ErrorNoInternetActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_six_dp"
        android:paddingTop="@dimen/fourteen_dp"
        android:paddingEnd="@dimen/sixteen_dp"
        android:textColor="@color/header_trending"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/trending"
        android:textSize="@dimen/twenty_four_sp"
        android:textAlignment="center"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableRightCompat="@drawable/more_black"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/grey_separation_line"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <ImageView
        android:id="@+id/no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nointernet_connection"
        android:contentDescription="@string/no_internet_connection"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/retry_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/something_went_wrong_title"
        android:textColor="@color/black"
        android:textSize="@dimen/eighteen_sp"
        app:layout_constraintTop_toBottomOf="@+id/no_internet_connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/error_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:fontFamily="@font/roboto"
        android:text="@string/something_went_wrong_message_body"
        android:textColor="@color/grey_error_message"
        android:textSize="@dimen/fifteen_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_title" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="@dimen/three_hundred_twenty_eight_dp"
        android:layout_height="@dimen/forty_eight_dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:background="@drawable/border"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/fifteen_sp"
        android:text="@string/retry"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>